# pictostick

./: .gitignore  .readthedocs.yaml  LICENSE_NL  README.md  TODO.txt  pictostick.code-workspace  todo-linter.sh
.github/: copilot-instructions.md
assets/: chatgtp_prompt.txt
assets/chatgtp/: convert_script.sh
assets/material/: convert_script.sh  convert_script_white.sh
assets/schematic/: schematic.xcf
assets/sclera/: convert_script.sh
docs/: .readthedocs.yaml  Doxyfile  HOWTO_WIFI.en.md  conf.py  index.rst
docs/caretakers/: caretakers.rst  first_start.rst
docs/developers/: developers.rst
docs/en/: .readthedocs.yaml  (+1 more)
picto_ws/: data.json  data_table.json  md5sum.txt  start.sh  url.txt  ws_json.py
pictodevice/: .gitignore  GEMINI.md  Improvements.md  platformio.ini  session_1752520730_timezone_fix.md  session_1752912000_issue_21_fix_loop.md  session_reset-all-activities-undone_1752825600.md  todo.md  versions.md
pictodevice_ui/: README.md  Themes.slt  picto_stick.sll  pictodevice_ui.sll  pictodevice_ui.spj
pictodevice_ui/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ScreenMAIN240x135.c  ui_ScreenMAIN240x320.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_aankleden_png.c  ui_img_douchen_png.c  ui_img_hotel_24dp_1f1f1f_fill0_wght400_grad0_opsz24_png.c
pictodevice_ui/ui/320x240/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ScreenMAIN.c  ui_ScreenSPLASH.c  ui_comp_hook.c  ui_img_logo_cropped_png.c  ui_img_sledding_24dp_1f1f1f_fill0_wght400_grad0_opsz24_png.c
pictostick/: README.md
pictostick_ui/: picto_stick.spj
pictowatch/: platformio.ini
(+221 files in other folders)
